# sgtpuzzles

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties
app/: app.iml.xsd  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/de/: blackbox.html  docindex.html  index.html  licence.html  palisade.html
app/src/main/assets/en/: blackbox.html  docindex.html  licence.html  mosaic.html  palisade.html
app/src/main/assets/zh/: blackbox.html  bridges.html  common.html  cube.html  docindex.html  dominosa.html  fifteen.html  filling.html  flip.html  flood.html  galaxies.html  guess.html  index.html  inertia.html  intro.html  keen.html  licence.html  lightup.html  loopy.html  magnets.html  map.html  mines.html  mosaic.html  net.html  netslide.html  palisade.html  pattern.html  pearl.html  pegs.html  range.html  rect.html  samegame.html  signpost.html  singles.html  sixteen.html  slant.html  solo.html  tents.html  towers.html  tracks.html  (+5 more)
app/src/main/jni/: CMakeLists.txt  android.c  android.h  list.c
app/src/main/jni/executable/: android-gen.c
app/src/main/res/anim/: fade_in.xml
app/src/main/res/drawable/: blackbox_sym_key_mouse_left.xml  bridges_sym_key_g.xml  bridges_sym_key_mouse_right.xml  dominosa_sym_key_mouse_left.xml  dominosa_sym_key_mouse_right.xml  filling_sym_key_mouse_right.xml  flip_sym_key_mouse_left.xml  flood_sym_key_mouse_left.xml  galaxies_sym_key_mouse_right.xml  guess_sym_key_l.xml  ic_action_game.xml  ic_action_help.xml  ic_action_load.xml  ic_action_redo.xml  ic_action_redo_disabled.xml  ic_action_save.xml  ic_action_swap_l_r.xml  ic_action_type.xml  ic_action_undo.xml  ic_action_undo_disabled.xml  ic_action_view_as_list.xml  ic_star.xml  line.xml  lock.xml  magnets_sym_key_mouse_left.xml  magnets_sym_key_mouse_right.xml  map_sym_key_c.xml  map_sym_key_l.xml  mines_sym_key_mouse_right.xml  net_sym_key_j.xml  no_line.xml  rotate_left_180.xml  rotate_left_90.xml  rotate_right_90.xml  slant_sym_key_mouse_left.xml  slant_sym_key_mouse_right.xml  square_circle.xml  square_corner.xml  square_corner_123.xml  square_dot.xml  (+11 more)
gradle/wrapper/: gradle-wrapper.properties
(+34 files in other folders)
